tests/ui/resolve/conflicts.stderr
error: identifier `Er1` already declared
  --> $DIR/conflicts.sol:9:7
   |
LL | error Er1(uint);
   |       --- note: previous declaration declared here
LL | error Er1(int);
   |       ^^^
   |

error: identifier `C` already declared
  --> $DIR/conflicts.sol:12:10
   |
LL | contract C {
   |          - note: previous declaration declared here
LL |     // OK
...
LL | 
LL | contract C {}
   |          ^
   |

error: identifier `m` already declared
  --> $DIR/conflicts.sol:21:14
   |
LL |     modifier m(uint) { _; }
   |              - note: previous declaration declared here
LL |     modifier m(int) { _; }
   |              ^
   |

error: identifier `Er2` already declared
  --> $DIR/conflicts.sol:24:11
   |
LL |     error Er2(uint);
   |           --- note: previous declaration declared here
LL |     error Er2(int);
   |           ^^^
   |

error: aborting due to 4 previous errors

